--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
+
+html, body {
+  font-family: 'Gamja Flower', cursive;
+}
+
 .App {
   text-align: center;
 }
